--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h3>This is practice for js</h3>
 
     <script src="index.js"></script>
+    <script src="/callApply.js"></script>
 </body>
 </html>
