--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h3>This is practice for js</h3>
 
     <script src="index.js"></script>
-    <script src="/callApply.js"></script>
+    <!-- <script src="/callApply.js"></script> -->
+    <script  src="/classInherite.js"></script>
 </body>
 </html>
