ES6 Class Inheritance

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <script src="index.js"></script>
     <!-- <script src="/callApply.js"></script> -->
-    <script  src="/classInherite.js"></script>
+    <!-- <script  src="/classInherite.js"></script>
+    <s -->
+        <script src="/Es6ClassInheritance.js"></script>
 </body>
 </html>
