--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Core JS</title>
+    <style>
+        body{
+            max-width: 80%;
+            margin-inline: auto;
+            background-color: rgb(216, 241, 241);
+        }
+        
+    </style>
 </head>
+
 <body>
-<h3>This is practice for js</h3>
+    <h3>This is practice for js</h3>
 
     <script src="index.js"></script>
     <!-- <script src="/callApply.js"></script> -->
     <!-- <script  src="/classInherite.js"></script>
     <s -->
-        <script src="/Es6ClassInheritance.js"></script>
+
+    <script src="/promisess.js"></script>
+
 </body>
+
 </html>
