--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
             margin-inline: auto;
             background-color: rgb(216, 241, 241);
         }
-        
+
     </style>
 </head>
 
 <body>
     <h3>This is practice for js</h3>
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
     <!-- <script src="/callApply.js"></script> -->
     <!-- <script  src="/classInherite.js"></script>
     <s -->
 
-    <script src="/promisess.js"></script>
+    <!-- <script src="/promisess.js"></script> -->
+    <script src="/asyncAwait.js"></script>
 
 </body>
 
