--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <s -->
 
     <!-- <script src="/promisess.js"></script> -->
-    <script src="/asyncAwait.js"></script>
+    <!-- <script src="/asyncAwait.js"></script> -->
+    <script src="/paralalRace.js"></script>
 
 </body>
 
