--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
     <!-- <script src="/promisess.js"></script> -->
     <!-- <script src="/asyncAwait.js"></script> -->
-    <script src="/paralalRace.js"></script>
+    <!-- <script src="/paralalRace.js"></script> -->
+    <script src="/error.js"></script>
 
 </body>
 
