--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Core JS</title>
-    <style>
-        body{
+    <style contenteditable style="display: block;">
+        html {
+            background: #dca8a8
+        }
+
+        /* body{
             max-width: 80%;
             margin-inline: auto;
             background-color: rgb(216, 241, 241);
-        }
-
+        } */
     </style>
 </head>
 
