--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <!-- <script src="index.js"></script> -->
     <!-- <script src="/callApply.js"></script> -->
-    <!-- <script  src="/classInherite.js"></script>
-    <s -->
+    <!-- <script  src="/classInherite.js"></script> -->
+    
 
     <!-- <script src="/promisess.js"></script> -->
     <!-- <script src="/asyncAwait.js"></script> -->
