--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <!-- <script src="/promisess.js"></script> -->
     <!-- <script src="/asyncAwait.js"></script> -->
     <!-- <script src="/paralalRace.js"></script> -->
-    <script src="/error.js"></script>
+    <!-- <script src="/error.js"></script> -->
+    <script src="/dataStructure.js"></script>
 
 </body>
 
